--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
 
 python:
-
   - "3.6"
 
-script:
+before_install:
+  - source .env
 
+script:
   - python hello.py
+  - pytest tests/
